fix bleed bug

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,8 @@ h1, h2, h3 {
 
 #container {
   width: 100%;
-  height: 150%;
+  height: 110%;
+  overflow: hidden;
 }
 
 #map {
@@ -114,7 +115,7 @@ padding-top: 1px;
   max-height: 20px;
 	padding-left: 5px;
 	padding-right: 5px;
-	margin: 5px 5px;
+	margin: 1px 1px;
 	border-radius: 10px;
 
 }
@@ -126,6 +127,7 @@ padding-top: 1px;
   /* margin: auto; */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+  border-radius: 3px;
   width: 100%;
   max-height: 200px;
 }
